# astroOS-2.0

./: .coverage  .env  .gitignore  Dockerfile.python  README.md  conftest.py  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  start-services.sh  worklog.md
db/: custom.db
docs/: HOW-TO-TRANSFER.md  PROMPT-FOR-FULLSTACK-DEV.md  QUICKSTART.md  analyst-implementation-guide.md  fullstack-analyst-handover.md  product-designer-proposal.md
mini-services/bazi-service/: index.ts  package.json
mini-services/chat-service/: index.ts  package.json
prisma/: schema.prisma
scripts/: import-family-cities.ts
services/ai_mentor/adapter/: providers.py
services/ai_mentor/api/: app.py
services/ai_mentor/domain/: crisis.py  entities.py
services/ai_mentor/usecase/: chat.py
services/astro_engine/adapter/: ephemeris.py
services/astro_engine/api/: app.py
services/astro_engine/domain/: abundance.py  arabic_parts.py  astrocartography.py  chart.py  compute.py  constants.py  local_space.py  lunar_nodes.py  lunar_phase.py  progressions.py  returns.py  synastry.py  transits.py
services/astro_engine/usecase/: build_natal.py
services/b2b_hr/adapter/: store.py
services/b2b_hr/api/: app.py
services/b2b_hr/domain/: advisory.py  entities.py  team_analysis.py
services/b2b_hr/usecase/: analyze_team.py
services/bazi_engine/adapter/: solar_terms.py
services/bazi_engine/api/: app.py
services/bazi_engine/domain/: bazi_compatibility.py  clashes.py  constants.py  date_selection.py  directions.py  famous_people.py  interpretation.py  pillars.py  professions.py  strength.py  yong_shen.py
services/bazi_engine/usecase/: resolve_bazi.py
services/birth_time/adapter/: solar_time.py  timezone_resolver.py
services/birth_time/api/: app.py
services/birth_time/domain/: entities.py
services/birth_time/usecase/: resolve_birth_time.py
services/common/: eventbus.py  events.py  observability.py
services/common/tests/: test_event_flows.py  test_eventbus.py  test_observability.py
services/geo/: repository.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/domain/: index.ts
src/infrastructure/: composition-root.ts
src/lib/: auth.ts
src/lib/astroos/: data.ts  (+2 more)
src/types/: next-auth.d.ts
tests/load/: lt1-daily-peak.js  lt3-onboarding-burst.js  lt5-geo-autocomplete.js
tool-results/: read_1782977179378_ae0f6b25a00f.txt
upload/: AGENT-HANDOVER.md
(+247 files in other folders)
