[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astroos"
version = "1.0.0"
description = "AstroOS Python microservices — birth-time, bazi, astro, daily, cosmic-match, ai-mentor (Clean Architecture)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "AstroOS" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tzdata>=2024.1",
    "pydantic>=2.5",
    "httpx>=0.25,<0.28",
    "python-socketio>=5.11",
    "python-engineio>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",  # socketio.AsyncClient websocket transport for tests
]

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
testpaths = ["services"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: pure domain logic, no I/O",
    "integration: adapter + API boundaries",
    "golden: deterministic domain math (frozen reference values)",
]

[tool.coverage.run]
branch = true
source = ["services"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "\\.\\.\\.", "if __name__"]
